--- a/Andersc.CodeLib.Lifeasier/Andersc.CodeLib.Lifeasier.csproj
+++ b/Andersc.CodeLib.Lifeasier/Andersc.CodeLib.Lifeasier.csproj
@@ -90,6 +90,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Components\AppInfo.cs" />
     <Compile Include="Components\DialogForm.cs">
       <SubType>Form</SubType>
     </Compile>
