--- a/Andersc.CodeLib.ConsoleAppSamples/Andersc.CodeLib.ConsoleAppSamples.csproj
+++ b/Andersc.CodeLib.ConsoleAppSamples/Andersc.CodeLib.ConsoleAppSamples.csproj
@@ -43,7 +43,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Andersc.CodeLib.ConsoleAppSamples.Watermark2</StartupObject>
+    <StartupObject>Andersc.CodeLib.ConsoleAppSamples.Watermark</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
