--- a/Andersc.CodeLib.Lifeasier/Andersc.CodeLib.Lifeasier.csproj
+++ b/Andersc.CodeLib.Lifeasier/Andersc.CodeLib.Lifeasier.csproj
@@ -245,14 +245,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="x64\SQLite.Interop.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="x86\SQLite.Interop.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Folder Include="x64\" />
+    <Folder Include="x86\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
