--- a/Andersc.CodeLib.Common/Andersc.CodeLib.Common.csproj
+++ b/Andersc.CodeLib.Common/Andersc.CodeLib.Common.csproj
@@ -40,6 +40,8 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -150,6 +152,9 @@
     <Compile Include="Maths\Matrix.cs" />
     <Compile Include="Maths\NumberTheory.cs" />
     <Compile Include="Maths\Polynomial.cs" />
+    <Compile Include="Maths\Size.cs" />
+    <Compile Include="Maths\Vector.cs" />
+    <Compile Include="Network\Browser.cs" />
     <Compile Include="Network\HttpRequestHelper.cs" />
     <Compile Include="ObjectDumper.cs" />
     <Compile Include="ObjectExtension.cs" />
@@ -249,6 +254,7 @@
     <Folder Include="x86\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
